--- a/styles.css
+++ b/styles.css
@@ -12,12 +12,13 @@
 }
 
 body {
-  margin: 0;
+  margin: 0 auto;
   padding: 40px;
   font-family: Outfit;
   font-size: 16px;
   line-height: 1.5em;
   color: #5f574e;
+  width: 50%;
 }
 
 img {
@@ -33,6 +34,7 @@ div {
   color: #302d2c;
   padding: 4px 0px;
   font-size: 250%;
+  line-height: 1;
 }
 
 #prep {
