--- a/styles.css
+++ b/styles.css
@@ -113,3 +113,9 @@ li {
 .attribution a {
   color: hsl(228, 45%, 44%);
 }
+
+@media screen and (max-width: 600px) {
+  body {
+    width: 100%;
+  }
+}
