--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body {
   font-size: 16px;
   line-height: 1.5em;
   color: #5f574e;
-  width: 50%;
+  max-width: 50%;
 }
 
 img {
@@ -112,10 +112,4 @@ li {
 
 .attribution a {
   color: hsl(228, 45%, 44%);
-}
-
-@media screen and (max-width: 600px) {
-  body {
-    width: 100%;
-  }
 }
